Closed Bug 872353 Opened 12 years ago Closed 12 years ago

nsSVGTextFrame2::Reflow does not get called and can be removed

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: heycam, Assigned: heycam)

Details

Attachments

(1 file)

nsSVGTextFrame2 isn't a reflow root, so this nsSVGTextFrame2::Reflow is not needed like it is in nsSVGForeignObjectFrame.
Attached patch patchSplinter Review
Assignee: nobody → cam
Status: NEW → ASSIGNED
Attachment #749621 - Flags: review?(jwatt)
Possibly we _should_ make it a reflow root though.
roc, heycam mentioned that he thought you said something about making nsSVGTextFrame2 (or its anonymous block?) a reflow root. Why was that?
Comment on attachment 749621 [details] [diff] [review] patch Let's get rid of it. We can always put it back if someone comes up with a good reason for it.
Attachment #749621 - Flags: review?(jwatt) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: