Bug 872353 - Remove nsSVGTextFrame2::Reflow(), which is currently unused. r=longsonr